syntax = "proto3";
package pb;
option go_package = "/pb";
import "google/api/annotations.proto";
import "validate/validate.proto";

service PickUpPoints {
  rpc Add(PickUpPointAdd) returns (PickUpPoint) {
    option (google.api.http) = {
      post: "/api/v1/pick-up-point"
      body: "*"
    };
  }
  rpc Delete(DeletePPRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/pick-up-point/{id}"
    };
  }
  rpc GetByID(GetByIDRequest) returns (PickUpPoint) {
    option (google.api.http) = {
      get: "/api/v1/pick-up-point/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns (stream PickUpPoint) {
    option (google.api.http) = {
      get: "/api/v1/pick-up-points"
    };
  }
  rpc Update(PickUpPointUpdate) returns (PickUpPointUpdate) {
    option (google.api.http) = {
      put: "/api/v1/pick-up-point"
      body: "*"
    };
  }
}

message GetAllRequest{}


message DeletePPRequest{
  uint64 id = 1;
}

message DeleteResponse{
  string result = 1;
}

message GetByIDRequest{
  uint64 id = 1;
}


message Address {
  string region = 1;
  string city = 2;
  string street = 3;
  string house_num = 4;
}

message PickUpPoint {
  uint64 id = 1;
  string name = 2;
  Address address = 3;
  string phone_number = 4;
}

message PickUpPointUpdate {
  uint64 id = 1 [(validate.rules).uint64.gte = 1];
  string name = 2 [(validate.rules).string.min_len = 5, (validate.rules).string.max_len = 50];
  AddressDTO address = 3 [(validate.rules).message.required = true];
  string phone_number = 4 [(validate.rules).string.pattern = "^[0-9]+$"];
}


message PickUpPointAdd {
  string name = 1 [(validate.rules).string.min_len = 5, (validate.rules).string.max_len = 50];
  AddressDTO address = 2 [(validate.rules).message.required = true];
  string phone_number = 3 [(validate.rules).string.pattern = "^[0-9]+$"];
}

message AddressDTO {
  string region = 1 [(validate.rules).string.min_len = 3, (validate.rules).string.max_len = 50];
  string city = 2 [(validate.rules).string.min_len = 3, (validate.rules).string.max_len = 50];
  string street = 3 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 50];
  string house_num = 4 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 10];
}
